[package]
name = "where-in-pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = "*"
rayon = "*"
rand = "*"
dashmap = "*"
ahash = "*"
indicatif = { version = "*", features = [ "rayon" ] }


[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
